kubernetes/applications/outline/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    matchLabels:
      app: outline-app
  replicas: 1
  template:
    metadata:
      labels:
        app: outline-app
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:0.85.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: web
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 8Gi
              memory: 2Gi
            requests:
              cpu: 500m
              ephemeral-storage: 8Gi
              memory: 1Gi
          volumeMounts:
            - name: outline-data
              mountPath: /var/lib/outline/data
  volumeClaimTemplates:
    - metadata:
        name: outline-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 2Gi
